<resources>
    <string name="app_name">QuanLyKho</string>
    <string name="api_key">AIzaSyDUWpR_NjzSkwxmYLwkXP-xXSBOgpuX2SQ</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="dashboard">DASHBOARD</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="save_receipt_button">LƯU PHIẾU</string>
    <string name="warehouse_text">KHO</string>
    <string name="supplies_list_text">DANH SÁCH VẬT TƯ</string>
    <string name="danh_sach_vat_tu_bt">DANH SÁCH VẬT TƯ</string>
    <string name="add_icon_desc">ADD</string>
    <string name="minus_icon_desc">XÓA</string>
    <string name="danh_s_ch_kho">Danh sách kho</string>
    <string name="danh_sach_vat_vu">Danh sách vật tư</string>
    <string name="lich_su_nhap_kho_bt">LỊCH SỬ NHẬP KHO</string>
    <string name="danh_sach_kho">Danh sách kho</string>
    <string name="nhap_kho">Nhập kho</string>
    <string name="xuat_kho">Xuất kho</string>
    <string name="lich_su_nhap_kho">Lịch sử nhập kho</string>
    <string name="lich_su_xuat_kho">Lịch sử xuất kho</string>
    <string name="quan_ly_kho">QUẢN LÝ KHO</string>
    <string name="ten_vat_tu">Tên vật tư</string>
    <string name="don_vi">Đơn vị</string>
    <string name="so_luong">Số lượng</string>
    <string name="kho_info">Mã kho:\nĐịa chỉ:</string>
    <string name="luu_phieu">LƯU PHIẾU</string>
    <string name="nhap_kho_bt">NHẬP KHO</string>
    <string name="thong_tin_kho_bt">THÔNG TIN KHO</string>
    <string name="thoat_bt">THOÁT</string>
    <string name="them">THÊM</string>
    <string name="sua">SỬA</string>
    <string name="xoa">XÓA</string>
    <string name="kho">KHO</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    //
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Mật khẩu</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="thong_ke_so_lieu">THỐNG KÊ SỐ LIỆU</string>
    <string name="xuat_file_bao_cao">XUẤT FILE BÁO CÁO</string>
    <string name="vat_tu">Vật tư</string>
    <string name="chon_kho">Chọn kho</string>
    <string name="chon_vat_tu">Chọn vật tư</string>
    <string name="dash">-</string>

    <string name="animateX">Animate X</string>
    <string name="animateY">Animate Y</string>
    <string name="animateXY">Animate XY</string>
    <string name="actionToggleValues">Toggle Values</string>
    <string name="actionToggleBarBorders">Toggle Bar Borders</string>

    <string name="actionToggleIcons">Toggle Icons</string>
    <string name="actionToggleHighlight">Toggle Highlight</string>
    <string name="actionTogglePinch">Toggle PinchZoom</string>
    <string name="actionToggleAutoScale">Toggle Auto Scale</string>

    <string name="actionSave">Save to Gallery</string>
    <string name="tao_file_pdf">TẠO FILE PDF</string>
    <string name="xuat_file_pdf">XUẤT FILE PDF</string>
    <string name="gui_mail">GỬI MAIL</string>
    <string name="nhap_email">Nhập Email</string>
    <string name="email">Email</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="thong_tin_nguoi_dung">Thông tin người dùng</string>
    <string name="tra_cuu_google_map">Tra cứu Google Map</string>
    <string name="ngon_ngu">Ngôn ngữ</string>
    <string name="dang_xuat">Đăng xuất</string>
    <string name="dang_nhap">ĐĂNG NHẬP</string>
    <string name="dang_ki_ngay">Đăng kí ngay</string>
    <string name="quen_mat_khau">Quên mật khẩu?</string>
    <string name="profile_updated">Profile Updated</string>
    <string name="email_is_changed">Email is changed.</string>
    <string name="One_or_Many_fields_are_empty">One or Many fields are empty.</string>
    <string name="Failed">Failed.</string>
    <string name="Verification_Email_Has_been_Sent">Verification Email Has been Sent.</string>
    <string name="Reset_Password">Reset Password</string>
    <string name="Enter_New_Password_more_6_Characters_long">Enter New Password more 6 Characters long.</string>
    <string name="Password_Reset_Successfully">Password Reset Successfully.</string>
    <string name="Password_Reset_Failed">Password Reset Failed.</string>
    <string name="Danh_Sach_Vạt_Tu">DANH SÁCH VẬT TƯ</string>
    <string name="So_luong_vat_tu">Số lượng vật tư</string>
    <string name="ten_vat_tu_khong_dươc_de_trong">Tên vật tư không được để trống</string>
    <string name="Don_vi_khong_duoc_trong">Đơn vị không được trống</string>
    <string name="Thong_tin_vat_tu_da_ton_tai">Thông tin vật tư đã tồn tại</string>
    <string name="Chup_tu_camera">Chụp từ Camera</string>
    <string name="Chon_tu_thu_vien">Chọn từ thư viện</string>
    <string name="Huy">Hủy</string>
    <string name="Chon_anh_cho_san_pham_moi">Chọn ảnh cho sản phẩm mới</string>
    <string name="Chup_tu_Camera">Chụp từ Camera</string>
    <string name="Chon_Tu_thu_vien">Chọn từ thư viện</string>
    <string name="huy">Hủy</string>
    <string name="ten_vat_tu_khong_duoc_trong">Tên vật tư không được trống</string>
    <string name="don_vi_khong_duoc_trong">Đơn vị không được trống</string>
    <string name="thong_tin_vat_tu_da_ton_tai">Thông tin vật tư đã tồn tại</string>
    <string name="Xuat_kho">XUẤT KHO</string>
    <string name="supplies_import_chart_by_day">Biểu đồ nhập vật tư theo ngày</string>
    <string name="suppies_chart">Biểu đồ vật tư</string>

</resources>