<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@drawable/border_black"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".feature.warehouse.WarehouseInfoFragment">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="10">
        <TextView
            android:text="@string/ten_vat_tu"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5">
        </TextView>
        <TextView
            android:text="@string/don_vi"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2">
        </TextView>
        <TextView
            android:text="@string/so_luong"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3">
        </TextView>
    </LinearLayout>
    <ListView
        android:id="@+id/warehouse_info_listview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:choiceMode="singleChoice"
        android:listSelector="#CCCCCC">
    </ListView>
</LinearLayout>