<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_chart_supplies"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputWarehouseLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:divider="@color/black"
            android:hint="@string/kho"
            app:startIconDrawable="@drawable/ic_baseline_house_24">

            <AutoCompleteTextView
                android:id="@+id/warehouseNameDropdown_ChartActivity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:text="@string/chon_kho" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputSuppliesLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:divider="@color/black"
            android:hint="@string/vat_tu"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editWarehouseButton"
            app:startIconDrawable="@drawable/ic_baseline_supplies_24">

            <AutoCompleteTextView
                android:id="@+id/suppliesNameDropdown"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="none"
                android:text="@string/chon_vat_tu" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.github.mikephil.charting.charts.BarChart
            android:id="@+id/supplieschart"
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="10dp"
            android:layout_height="0dp"
            android:layout_weight="3"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigationView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:itemHorizontalPadding="10dp"
        app:itemIconSize="@dimen/navigation_item_icon_size"
        app:itemIconTint="@drawable/drawer_item_color"
        app:itemTextAppearance="@style/NavigationViewStyle"
        app:itemTextColor="@drawable/drawer_item_color"
        app:itemVerticalPadding="20dp"
        app:menu="@menu/navigation_menu"></com.google.android.material.navigation.NavigationView>
</androidx.drawerlayout.widget.DrawerLayout>