<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@drawable/border_black"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".feature.receipt.ReceiptDetailFragment">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="10">
    <TextView
        android:layout_weight="6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/supplies_list_text"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="20sp"></TextView>
    <ImageButton
        android:id="@+id/addSuppliesButton"
        android:layout_weight="2"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@null"
        android:contentDescription="@string/add_icon_desc"
        android:src="@drawable/add_icon_48">
    </ImageButton>
    <ImageButton
        android:id="@+id/delSuppliesButton"
        android:layout_weight="2"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@null"
        android:contentDescription="@string/minus_icon_desc"
        android:src="@drawable/minus_icon_48">
    </ImageButton>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="10">
        <TextView
            android:text="Tên vật tư"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5">
        </TextView>
        <TextView
            android:text="Đơn vị"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2">
        </TextView>
        <TextView
            android:text="Số lượng"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3">
        </TextView>
    </LinearLayout>
    <ListView
        android:id="@+id/receipt_detail_listview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:choiceMode="singleChoice"
        android:listSelector="#CCCCCC">
    </ListView>
</LinearLayout>